@@ -3,6 +3,6 @@ check_PROGRAMS	=	t0001
 
 t0001_SOURCES	=	t0001.c common.c
 
-LIBS		=	../libtdsodbc.la -lodbc @NETWORK_LIBS@
+LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
 include_HEADERS =       common.h
